--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.2",
+    "framer-motion": "^2.4.3-beta.2",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-mailchimp-subscribe": "^2.1.0"
+  },
+  "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "file-loader": "^6.0.0"
   }
 }
